# assignment_solve-maze

./: CMakeLists.txt  README.md
app/scripts/: assignment_solve-maze.xml
smoke-test/: CMakeLists.txt  test.cpp  test.xml
smoke-test/fixtures/: fixture.xml
src/: craft.cpp  handler.cpp
